<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/com_toolbar"/>
    <RelativeLayout
        android:id="@+id/nat"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        />
	<RelativeLayout
	    style="@style/LoginRootLayoutStyle"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <LinearLayout 
	        android:id="@+id/ll_main"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        <android.support.design.widget.TextInputLayout
	            android:layout_width="match_parent"
				android:layout_height="wrap_content">
	            <EditText 
		            android:id="@+id/et_account"
		            style="@style/AccountTextStyle"
		            android:hint="@string/login_hint_account"/>
	        </android.support.design.widget.TextInputLayout>
	        
	        <android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
	            <EditText 
		            android:id="@+id/et_nickname"
		            style="@style/AccountTextStyle"
		            android:layout_marginTop="@dimen/login_password_margin_top"
		            android:hint="@string/login_hint_nickname"/>
	        </android.support.design.widget.TextInputLayout>
	        
	        <android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
	            <EditText 
		            android:id="@+id/et_email"
		            style="@style/AccountTextStyle"
		            android:inputType="textEmailAddress"
		            android:layout_marginTop="@dimen/login_password_margin_top"
		            android:hint="@string/login_hint_email"/>
	        </android.support.design.widget.TextInputLayout>
	        
	        <android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
	            <EditText 
		            android:id="@+id/et_password"
		            style="@style/PasswordTextStyle"
		            android:hint="@string/login_hint_password"
		            android:imeOptions="actionNext"
		            android:layout_marginTop="@dimen/login_password_margin_top"/>
	        </android.support.design.widget.TextInputLayout>
	        
	        <android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
	            <EditText 
		            android:id="@+id/et_confirm_password"
		            style="@style/PasswordTextStyle"
		            android:hint="@string/login_hint_confirm_password"
		            android:imeOptions="actionDone"
		            android:layout_marginTop="@dimen/login_password_margin_top"/>
	        </android.support.design.widget.TextInputLayout>
<!-- 		        style="@style/LoginTextStyle" -->
	        <Button 
		        android:id="@+id/btn_regist"
		        style="@style/CommonWidthButtonstyle.Green"
		        android:layout_marginTop="@dimen/login_signin_button_margin_top"
		        android:enabled="false"
		        android:text="@string/login_text_button_regist"/>
	    </LinearLayout>
	
	    <TextView 
	        android:id="@+id/tv_login"
	        style="@style/LoginBottomTextStyle"
	        android:text="@string/login_text_login"/>
	</RelativeLayout>
</LinearLayout>
