<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >
    <include layout="@layout/com_toolbar"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <EditText 
	        android:id="@+id/et_username"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/contact_hint_search_friend"
	        android:drawableLeft="@drawable/contact_search_friend"
	        android:drawableStart="@drawable/contact_search_friend"
	        android:gravity="center_vertical"/>
	    
	    <Button 
	        android:id="@+id/btn_search"
	        style="@style/CommonSmallButtonstyle.Green"
	        android:text="@string/contact_hint_search"
	        android:enabled="false"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/lv_result"
        style="@style/CommonListViewStyle"
        android:padding="@dimen/activity_vertical_margin"/>

    <TextView 
        android:id="@id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/no_result"
        android:gravity="center"
        android:visibility="gone"/>
    
</LinearLayout>
