<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >
    
    <TextView 
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_xl"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/splash_desc"/>
    
    <ImageView 
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_above="@id/tv_desc"/>
    
    <Button 
        android:id="@id/btn_login"
        style="@style/CommonNormalButtonstyle.Green"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/login_text_button_signin"
        android:textSize="@dimen/font_size_x"
        android:visibility="gone"/>
    
    <Button 
        android:id="@id/btn_regist"
        style="@style/CommonNormalButtonstyle.Grey"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/login_text_button_regist"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_size_x"
        android:visibility="gone"/>

</RelativeLayout>
